--- a/requirements.txt
+++ b/requirements.txt
@@ -94,3 +94,9 @@ wcwidth==0.2.13
 Werkzeug==3.1.3
 widgetsnbextension==4.0.14
 wrapt==1.16.0
+
+Django==4.2
+pillow==9.5.0
+numpy==1.25.2
+pandas==2.2.0
+
